public enum Attribute {
    Speed, 
    Size, 
    Color
}
