public enum Distance {
    ToWater,
    ToFood
}