public enum Need {
    Sleep,
    Hunger, 
    ReproductiveUrge,
    Thirst
}
