public enum Species {
    Chicken,
    Fox,
    Grass
}